--- a/index.html
+++ b/index.html
@@ -1,12 +1,223 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Burgers</title>
-</head>
-<body>
-  
-</body>
+<html lang="ru">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/main.css">
+    <title>Burgers</title>
+  </head>
+  <body>
+    <div class="wrapper">
+      <section class="top">
+        <div class="container top__container">
+          <header class="header">
+            <a href="#" class="header__logo">
+              <img class="header__logo__img" src="./icons/logo.svg" alt="">
+            </a>
+            <nav class="header__nav">
+              <ul class="header__nav__list">
+                <li class="header__nav__item">
+                  <a href="#" class="header__nav__link">
+                    о нас
+                  </a>
+                </li>
+                <li class="header__nav__item">
+                  <a href="#" class="header__nav__link">
+                    бургеры
+                  </a>
+                </li>
+                <li class="header__nav__item">
+                  <a href="#" class="header__nav__link">
+                    команда
+                  </a>
+                </li>
+                <li class="header__nav__item">
+                  <a href="#" class="header__nav__link">
+                    меню
+                  </a>
+                </li>
+                <li class="header__nav__item">
+                  <a href="#" class="header__nav__link">
+                    отзывы
+                  </a>
+                </li>
+                <li class="header__nav__item">
+                  <a href="#" class="header__nav__link">
+                    как мы работаем
+                  </a>
+                </li>
+                <li class="header__nav__item">
+                  <a href="#" class="header__nav__link">
+                    контакты
+                  </a>
+                </li>
+              </ul>
+            </nav>
+            <a href="#" class="header__button">
+              заказать
+            </a>
+          </header>
+          <div class="top__contain">
+            <div class="top__content">
+              <div class="top__pic">
+                <img src="./img/burger.png" alt="" class="top__pic__img">
+              </div>
+              <div class="top__text">
+                <h1 class="section__title">
+                  мы делаем
+                </h1>
+                <div class="top__desc">
+                  натуральные бургеры
+                </div>
+              </div>
+            </div>
+          </div>
+          <img class="top__scroll" src="./icons/arrow-scroll.svg" alt="">
+        </div>
+      </section>
+      <section class="best">
+        <div class="container">
+          <h1 class="section__title">
+            мы лучшие
+          </h1>
+          <ul class="best__list">
+            <li class="best__item">
+              <div class="best__icon">
+                <img class="best__icon__img" src="./icons/meat.svg" alt="">
+              </div>
+              <div class="best__content">
+                <h2 class="best__content__title">
+                  100% свежее мясо
+                </h2>
+                <p class="best__content__text">
+                  Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Ямб неравномерен.
+                </p>
+              </div>
+            </li>
+            <li class="best__item">
+              <div class="best__icon">
+                <img class="best__icon__img" src="./icons/meat.svg" alt="">
+              </div>
+              <div class="best__content">
+                <h2 class="best__content__title">
+                  Ручная  сборка
+                </h2>
+                <p class="best__content__text">
+                  Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Первое полустишие притягивает сюжетный реформаторский пафос.
+                </p>
+              </div>
+            </li>
+            <li class="best__item">
+              <div class="best__icon">
+                <img class="best__icon__img" src="./icons/meat.svg" alt="">
+              </div>
+              <div class="best__content">
+                <h2 class="best__content__title">
+                  Натуральные ингредиенты
+                </h2>
+                <p class="best__content__text">
+                  Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Ямб неравномерен.
+                </p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="team">
+        <div class="container">
+          <h1 class="section__title">
+            команда
+          </h1>
+          <ul class="team__list">
+            <li class="team__item">
+              <a href="#" class="team__name"></a>
+              <div class="team__content">
+                <div class="team__img">
+                  <img src="./img/team.jpg" alt="" class="team__img__pic">
+                </div>
+                <div class="team__text">
+                  <div class="team__text__title">
+                    Оператор
+                  </div>
+                  <div class="team__text__desc">
+                    С радостью поможет подобрать идеальный бургер и оформить заказ.  
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="team__item">
+              <a href="#" class="team__name"></a>
+              <div class="team__content">
+                <div class="team__img">
+                  <img src="./img/team.jpg" alt="" class="team__img__pic">
+                </div>
+                <div class="team__text">
+                  <div class="team__text__title">
+                    Оператор
+                  </div>
+                  <div class="team__text__desc">
+                    С радостью поможет подобрать идеальный бургер и оформить заказ.  
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="team__item">
+              <a href="#" class="team__name"></a>
+              <div class="team__content">
+                <div class="team__img">
+                  <img src="./img/team.jpg" alt="" class="team__img__pic">
+                </div>
+                <div class="team__text">
+                  <div class="team__text__title">
+                    Оператор
+                  </div>
+                  <div class="team__text__desc">
+                    С радостью поможет подобрать идеальный бургер и оформить заказ.  
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="team__item">
+              <a href="#" class="team__name"></a>
+              <div class="team__content">
+                <div class="team__img">
+                  <img src="./img/team.jpg" alt="" class="team__img__pic">
+                </div>
+                <div class="team__text">
+                  <div class="team__text__title">
+                    Оператор
+                  </div>
+                  <div class="team__text__desc">
+                    С радостью поможет подобрать идеальный бургер и оформить заказ.  
+                  </div>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="menu">
+        <div class="container">
+          <h1 class="section__title">меню</h1>
+          <ul class="menu__list">
+            <li class="menu__item">
+              <div class="menu__name">для мясоедов</div>
+              <p class="menu__text">
+                Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову, однако механизм сочленений неустойчив. Модальность высказывания, как справедливо считает И.Гальперин, пространственно выбирает метр. Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <footer class="footer">
+      </footer>
+    </div>
+    <nav class="">
+      <ul class="">
+        <li class=""></li>
+      </ul>
+    </nav>
+  </body>
 </html>
