--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <img src="./img/burger.png" alt="" class="top__pic__img">
               </div>
               <div class="top__text">
-                <h1 class="section__title">
+                <h1 class="top__title">
                   мы делаем
                 </h1>
                 <div class="top__desc">
@@ -78,8 +78,8 @@
         </div>
       </section>
       <section class="best">
-        <div class="container">
-          <h1 class="section__title">
+        <div class="container best__container">
+          <h1 class="best__title">
             мы лучшие
           </h1>
           <ul class="best__list">
@@ -92,13 +92,13 @@
                   100% свежее мясо
                 </h2>
                 <p class="best__content__text">
-                  Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Ямб неравномерен.
+                  Драма представляет собой деструктивный цикл. Анапест представляет собой анапест.
                 </p>
               </div>
             </li>
             <li class="best__item">
               <div class="best__icon">
-                <img class="best__icon__img" src="./icons/meat.svg" alt="">
+                <img class="best__icon__img" src="./icons/hand.svg" alt="">
               </div>
               <div class="best__content">
                 <h2 class="best__content__title">
@@ -111,14 +111,14 @@
             </li>
             <li class="best__item">
               <div class="best__icon">
-                <img class="best__icon__img" src="./icons/meat.svg" alt="">
+                <img class="best__icon__img" src="./icons/natural.svg" alt="">
               </div>
               <div class="best__content">
                 <h2 class="best__content__title">
                   Натуральные ингредиенты
                 </h2>
                 <p class="best__content__text">
-                  Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Ямб неравномерен.
+                  Драма представляет собой деструктивный цикл. Анапест представляет собой анапест.
                 </p>
               </div>
             </li>
@@ -126,16 +126,16 @@
         </div>
       </section>
       <section class="team">
-        <div class="container">
-          <h1 class="section__title">
+        <div class=" team__container">
+          <h1 class="team__title">
             команда
           </h1>
           <ul class="team__list">
             <li class="team__item">
-              <a href="#" class="team__name"></a>
+              <a href="#" class="team__name">дениэл редклиф</a>
               <div class="team__content">
                 <div class="team__img">
-                  <img src="./img/team.jpg" alt="" class="team__img__pic">
+                  <img src="./img/team.png" alt="" class="team__img__pic">
                 </div>
                 <div class="team__text">
                   <div class="team__text__title">
@@ -148,10 +148,10 @@
               </div>
             </li>
             <li class="team__item">
-              <a href="#" class="team__name"></a>
+              <a href="#" class="team__name">ричард джеймс</a>
               <div class="team__content">
                 <div class="team__img">
-                  <img src="./img/team.jpg" alt="" class="team__img__pic">
+                  <img src="./img/team.png" alt="" class="team__img__pic">
                 </div>
                 <div class="team__text">
                   <div class="team__text__title">
@@ -164,26 +164,10 @@
               </div>
             </li>
             <li class="team__item">
-              <a href="#" class="team__name"></a>
+              <a href="#" class="team__name">джейк финн</a>
               <div class="team__content">
                 <div class="team__img">
-                  <img src="./img/team.jpg" alt="" class="team__img__pic">
-                </div>
-                <div class="team__text">
-                  <div class="team__text__title">
-                    Оператор
-                  </div>
-                  <div class="team__text__desc">
-                    С радостью поможет подобрать идеальный бургер и оформить заказ.  
-                  </div>
-                </div>
-              </div>
-            </li>
-            <li class="team__item">
-              <a href="#" class="team__name"></a>
-              <div class="team__content">
-                <div class="team__img">
-                  <img src="./img/team.jpg" alt="" class="team__img__pic">
+                  <img src="./img/team.png" alt="" class="team__img__pic">
                 </div>
                 <div class="team__text">
                   <div class="team__text__title">
@@ -200,7 +184,7 @@
       </section>
       <section class="menu">
         <div class="container">
-          <h1 class="section__title">меню</h1>
+          <h1 class="menu__title">меню</h1>
           <ul class="menu__list">
             <li class="menu__item">
               <div class="menu__name">для мясоедов</div>
@@ -211,12 +195,128 @@
           </ul>
         </div>
       </section>
+      <section class="comments">
+        <ul class="comments__list">
+          <li class="comments__item">
+            <div class="comments__content">
+              <div class="comments__title">
+                Константин Спилберг
+              </div>
+              <div class="comments__text">
+                Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.
+              </div>
+              <div class="comments__button">
+                подробнее
+              </div>
+            </div>
+          </li>
+          <li class="comments__item">
+            <div class="comments__content">
+              <div class="comments__title">
+                Константин Спилберг
+              </div>
+              <div class="comments__text">
+                Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.
+              </div>
+              <div class="comments__button">
+                подробнее
+              </div>
+            </div>
+          </li>
+          <li class="comments__item">
+            <div class="comments__content">
+              <div class="comments__title">
+                Константин Спилберг
+              </div>
+              <div class="comments__text">
+                Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть. Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.
+              </div>
+              <div class="comments__button">
+                подробнее
+              </div>
+            </div>
+          </li>
+          <li class="comments__item">
+            <div class="comments__content">
+              <div class="comments__title">
+                Константин Спилберг
+              </div>
+              <div class="comments__text">
+                Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.
+              </div>
+              <div class="comments__button">
+                подробнее
+              </div>
+            </div>
+          </li>
+          <li class="comments__item">
+            <div class="comments__content">
+              <div class="comments__title">
+                Константин Спилберг
+              </div>
+              <div class="comments__text">
+                Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.
+              </div>
+              <div class="comments__button">
+                подробнее
+              </div>
+            </div>
+          </li>
+          <li class="comments__item">
+            <div class="comments__content">
+              <div class="comments__title">
+                Константин Спилберг
+              </div>
+              <div class="comments__text">
+                Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.
+              </div>
+              <div class="comments__button">
+                подробнее
+              </div>
+            </div>
+          </li>
+          <li class="comments__item">
+            <div class="comments__content">
+              <div class="comments__title">
+                Константин Спилберг
+              </div>
+              <div class="comments__text">
+                Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.
+              </div>
+              <div class="comments__button">
+                подробнее
+              </div>
+            </div>
+          </li>
+          <li class="comments__item">
+            <div class="comments__content">
+              <div class="comments__title">
+                Константин Спилберг
+              </div>
+              <div class="comments__text">
+                Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.
+              </div>
+              <div class="comments__button">
+                подробнее
+              </div>
+            </div>
+          </li>
+        </ul>
+      </section>
       <footer class="footer">
       </footer>
     </div>
-    <nav class="">
-      <ul class="">
-        <li class=""></li>
+    <nav class="fix">
+      <ul class="fix__list">
+        <li class="fix__item"></li>
+        <li class="fix__item"></li>
+        <li class="fix__item"></li>
+        <li class="fix__item"></li>
+        <li class="fix__item"></li>
+        <li class="fix__item"></li>
+        <li class="fix__item"></li>
+        <li class="fix__item"></li>
+        <li class="fix__item"></li>
       </ul>
     </nav>
   </body>
