--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
             <a href="#" class="header__button">
               заказать
             </a>
+            <div class="header__hamburger">
+              <div class="header__hamburger__nav"></div>
+              <div class="header__hamburger__nav"></div>
+              <div class="header__hamburger__nav"></div>
+            </div>
           </header>
           <div class="top__contain">
             <div class="top__content">
@@ -303,20 +308,143 @@
           </li>
         </ul>
       </section>
-      <footer class="footer">
-      </footer>
+      <section class="working">
+        <h1 class="working__title">как мы работаем</h1>
+      </section>
+      <section class="forms">
+        <div class="container forms__container">
+          <h1 class="forms__title">
+            закажите доставку
+          </h1>
+          <form class="forms__all" action="">
+            <div class="forms__left">
+              <div class="forms__row">
+                <label class="forms__left__label"  for="">
+                  <div class="forms__left__name">Имя</div>
+                  <input class="forms__left__input" type="text" name="" id="">
+                </label>
+                <label class="forms__left__label" for="">
+                  <div class="forms__left__name">Телефон</div>
+                  <input class="forms__left__input" type="text" name="" id="">
+                </label>
+              </div>
+              <div class="forms__row">
+                <label class="forms__left__label" for="">
+                  <div class="forms__left__name">Улица</div>
+                  <input class="forms__left__input" type="text" name="" id="">
+                </label>
+              </div>
+              <div class="forms__row">
+                <label class="forms__left__label" for="">
+                  <div class="forms__left__name">Дом</div>
+                  <input class="forms__left__input" type="text" name="" id="">
+                </label>
+                <label class="forms__left__label" for="">
+                  <div class="forms__left__name">Корпус</div>
+                  <input class="forms__left__input" type="text" name="" id="">
+                </label>
+                <label class="forms__left__label" for="">
+                  <div class="forms__left__name">Квартира</div>
+                  <input class="forms__left__input" type="text" name="" id="">
+                </label>
+                <label class="forms__left__label" for="">
+                  <div class="forms__left__name">Этаж</div>
+                  <input class="forms__left__input" type="text" name="" id="">
+                </label>
+              </div>
+            </div>
+            <div class="forms__right">
+              <label for="">
+                <div class="forms__right__name">Комментарий</div>
+                <textarea class="forms__right__textarea" name="" id="" cols="30" rows="10"></textarea>
+              </label>
+              <div class="forms__row">
+                <label class="forms__right__label" for="change">
+                  <input class="forms__right__radio" type="radio" name="radio" id="change">
+                  <span class="forms__radio__click">
+                    <div class="forms__radio__click--active"></div>
+                  </span>Потребуется сдача
+                </label>
+                <label class="forms__right__label" for="card">
+                  <input class="forms__right__radio" type="radio" name="radio" id="card">
+                  <span class="forms__radio__click">
+                    <div class="forms__radio__click--active"></div>
+                  </span>Оплата по карте
+                </label>
+              </div>
+              <label class="forms__right__label" for="check">
+                <input class="forms__right__checkbox" type="checkbox" name="checkbox" id="check">
+                <span class="forms__checkbox__click">
+                  <div class="forms__checkbox__click--active"></div>
+                </span>Не перезванивать
+              </label>
+              <div class="forms__row">
+                <div class="forms__order">Заказать</div>
+                <div class="forms__clear">Очистить</div>
+              </div>
+            </div>
+          </form>
+        </div>
+      </section>
+      <section class="end">
+        <footer class="footer">
+          <div class=" footer__container">
+            <div class="footer__info">
+              <div class="footer__street">
+                Санкт-Петербург, ул.Бабушкина, д.12/1, 15
+              </div>
+              <div class="footer__nomber">
+                <img class="footer__nomber__img" src="./icons/phone.svg" alt="">
+                +7 (812) 377-13-77
+              </div>
+            </div>
+            <ul class="footer__list">
+              <li class="footer__item">
+                <img class="footer__img" width="23px" height="13px" src="./icons/vk.svg" alt="">
+              </li>
+              <li class="footer__item">
+                <img class="footer__img" width="20px" height="20px" src="./icons/fb.svg" alt="">
+              </li>
+              <li class="footer__item">
+                <img class="footer__img" width="20px" height="20px" src="./icons/inst.svg" alt="">
+              </li>
+              <li class="footer__item">
+                <img class="footer__img" width="20px" height="16px" src="./icons/ttw.svg" alt="">
+              </li>
+            </ul>
+          </div>
+        </footer>
+      </section>
     </div>
     <nav class="fix">
       <ul class="fix__list">
-        <li class="fix__item"></li>
-        <li class="fix__item"></li>
-        <li class="fix__item"></li>
-        <li class="fix__item"></li>
-        <li class="fix__item"></li>
-        <li class="fix__item"></li>
-        <li class="fix__item"></li>
-        <li class="fix__item"></li>
-        <li class="fix__item"></li>
+        <li class="fix__item">
+          <div class="fix__circl"></div>
+        </li>
+        <li class="fix__item">
+          <div class="fix__circl"></div>
+        </li>
+        <li class="fix__item">
+          <div class="fix__circl"></div>
+        </li>
+        <li class="fix__item">
+          <div class="fix__circl"></div>
+        </li>
+        <li class="fix__item">
+          <div class="fix__circl"></div>
+        </li>
+        <li class="fix__item">
+          <div class="fix__circl"></div>
+        </li>
+        <li class="fix__item">
+          <div class="fix__circl"></div>
+        </li>
+        <li class="fix__item">
+          <div class="fix__circl"></div>
+        </li>
+        <li class="fix__item">
+          <div class="fix__circl"></div>
+        </li>
       </ul>
     </nav>
   </body>
