--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <div class="top__contain">
             <div class="top__content">
               <div class="top__pic">
-                <img src="./img/burger.png" alt="" class="top__pic__img">
+                <img src="./image/burger.png" alt="" class="top__pic__img">
               </div>
               <div class="top__text">
                 <h1 class="top__title">
@@ -140,7 +140,7 @@
               <a href="#" class="team__name">дениэл редклиф</a>
               <div class="team__content">
                 <div class="team__img">
-                  <img src="./img/team.png" alt="" class="team__img__pic">
+                  <img src="./image/team.png" alt="" class="team__img__pic">
                 </div>
                 <div class="team__text">
                   <div class="team__text__title">
@@ -156,7 +156,7 @@
               <a href="#" class="team__name">ричард джеймс</a>
               <div class="team__content">
                 <div class="team__img">
-                  <img src="./img/team.png" alt="" class="team__img__pic">
+                  <img src="./image/team.png" alt="" class="team__img__pic">
                 </div>
                 <div class="team__text">
                   <div class="team__text__title">
@@ -172,7 +172,7 @@
               <a href="#" class="team__name">джейк финн</a>
               <div class="team__content">
                 <div class="team__img">
-                  <img src="./img/team.png" alt="" class="team__img__pic">
+                  <img src="./image/team.png" alt="" class="team__img__pic">
                 </div>
                 <div class="team__text">
                   <div class="team__text__title">
