--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 мы делаем
               </h1>
               <div class="top__desc">
-                натуральные бургеры
+                натуральные<br> бургеры
               </div>
             </div>
           </div>
