--- a/index.html
+++ b/index.html
@@ -211,6 +211,9 @@
               <div class="comments__button">
                 подробнее
               </div>
+              <div class="comments__but">
+                читать отзыв
+              </div>
             </div>
           </li>
           <li class="comments__item">
@@ -223,6 +226,9 @@
               </div>
               <div class="comments__button">
                 подробнее
+              </div>
+              <div class="comments__but">
+                читать отзыв
               </div>
             </div>
           </li>
@@ -237,18 +243,8 @@
               <div class="comments__button">
                 подробнее
               </div>
-            </div>
-          </li>
-          <li class="comments__item">
-            <div class="comments__content">
-              <div class="comments__title">
-                Константин Спилберг
-              </div>
-              <div class="comments__text">
-                Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.
-              </div>
-              <div class="comments__button">
-                подробнее
+              <div class="comments__but">
+                читать отзыв
               </div>
             </div>
           </li>
@@ -263,18 +259,8 @@
               <div class="comments__button">
                 подробнее
               </div>
-            </div>
-          </li>
-          <li class="comments__item">
-            <div class="comments__content">
-              <div class="comments__title">
-                Константин Спилберг
-              </div>
-              <div class="comments__text">
-                Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.
-              </div>
-              <div class="comments__button">
-                подробнее
+              <div class="comments__but">
+                читать отзыв
               </div>
             </div>
           </li>
@@ -289,6 +275,9 @@
               <div class="comments__button">
                 подробнее
               </div>
+              <div class="comments__but">
+                читать отзыв
+              </div>
             </div>
           </li>
           <li class="comments__item">
@@ -301,6 +290,41 @@
               </div>
               <div class="comments__button">
                 подробнее
+              </div>
+              <div class="comments__but">
+                читать отзыв
+              </div>
+            </div>
+          </li>
+          <li class="comments__item">
+            <div class="comments__content">
+              <div class="comments__title">
+                Константин Спилберг
+              </div>
+              <div class="comments__text">
+                Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.
+              </div>
+              <div class="comments__button">
+                подробнее
+              </div>
+              <div class="comments__but">
+                читать отзыв
+              </div>
+            </div>
+          </li>
+          <li class="comments__item">
+            <div class="comments__content">
+              <div class="comments__title">
+                Константин Спилберг
+              </div>
+              <div class="comments__text">
+                Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.
+              </div>
+              <div class="comments__button">
+                подробнее
+              </div>
+              <div class="comments__but">
+                читать отзыв
               </div>
             </div>
           </li>
