--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           </h1>
           <ul class="team__list">
             <li class="team__item">
-              <a href="#" class="team__name">дениэл редклиф</a>
+              <a href="javascript: void 0" class="team__name">дениэл редклиф</a>
               <div class="team__content">
                 <div class="team__img">
                   <img src="./image/team.png" alt="" class="team__img__pic">
@@ -151,7 +151,23 @@
               </div>
             </li>
             <li class="team__item">
-              <a href="#" class="team__name">ричард джеймс</a>
+              <a href="javascript: void 0" class="team__name">ричард джеймс</a>
+              <div class="team__content team__content--active">
+                <div class="team__img">
+                  <img src="./image/team.png" alt="" class="team__img__pic">
+                </div>
+                <div class="team__text">
+                  <div class="team__text__title">
+                    Оператор
+                  </div>
+                  <div class="team__text__desc">
+                    С радостью поможет подобрать идеальный бургер и оформить заказ.  
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="team__item">
+              <a href="javascript: void 0" class="team__name">джейк финн</a>
               <div class="team__content">
                 <div class="team__img">
                   <img src="./image/team.png" alt="" class="team__img__pic">
@@ -167,7 +183,7 @@
               </div>
             </li>
             <li class="team__item">
-              <a href="#" class="team__name">джейк финн</a>
+              <a href="javascript: void 0" class="team__name">дениэл редклиф</a>
               <div class="team__content">
                 <div class="team__img">
                   <img src="./image/team.png" alt="" class="team__img__pic">
@@ -186,17 +202,27 @@
         </div>
       </section>
       <section class="menu">
-        <div class="container">
-          <h1 class="menu__title">меню</h1>
-          <ul class="menu__list">
-            <li class="menu__item">
-              <div class="menu__name">для мясоедов</div>
-              <p class="menu__text">
-                Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову, однако механизм сочленений неустойчив. Модальность высказывания, как справедливо считает И.Гальперин, пространственно выбирает метр. Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову.
-              </p>
-            </li>
-          </ul>
-        </div>
+        <h1 class="menu__title">меню</h1>
+        <ul class="menu__list">
+          <li class="menu__item">
+            <div class="menu__name">для мясоедов</div>
+            <p class="menu__text">
+              Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову, однако механизм сочленений неустойчив. Модальность высказывания, как справедливо считает И.Гальперин, пространственно выбирает метр. Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову.
+            </p>
+          </li>
+          <li class="menu__item">
+            <div class="menu__name">для мясоедов</div>
+            <p class="menu__text">
+              Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову, однако механизм сочленений неустойчив. Модальность высказывания, как справедливо считает И.Гальперин, пространственно выбирает метр. Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову.
+            </p>
+          </li>
+          <li class="menu__item">
+            <div class="menu__name">для мясоедов</div>
+            <p class="menu__text">
+              Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову, однако механизм сочленений неустойчив. Модальность высказывания, как справедливо считает И.Гальперин, пространственно выбирает метр. Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову.
+            </p>
+          </li>
+        </ul>
       </section>
       <section class="comments">
         <ul class="comments__list">
@@ -401,8 +427,8 @@
                 </span>Не перезванивать
               </label>
               <div class="forms__row">
-                <div class="forms__order">Заказать</div>
-                <div class="forms__clear">Очистить</div>
+                <a class="forms__order">Заказать</a>
+                <a class="forms__clear">Очистить</a>
               </div>
             </div>
           </form>
